landing layout overflow fix

--- a/src/scss/layouts/landing-layout.scss
+++ b/src/scss/layouts/landing-layout.scss
@@ -3,7 +3,6 @@
   min-width: 100%;
   display: grid;
   grid-template-rows: auto minmax(30vh,auto);
-  overflow:hidden;
 }
 #main--container-landing {
   display: grid;
